--- a/style.css
+++ b/style.css
@@ -52,3 +52,13 @@ hr {
 .reddened {
 	border: 1px solid red !important;
 }
+
+.footer {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: rgb(0, 0, 0);
+	color: white;
+	text-align: center;
+}
