--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Molengo&display=swap");
+
 body {
 	background: url(img/warehouse.jpg);
 	background-size: cover;
@@ -28,6 +30,12 @@ body > div.contain > div:nth-child(3) > div.d-flex.justify-content-end > div {
 
 body > div.contain > div:nth-child(3) > div.d-flex.justify-content-end > div > div {
 	padding: 0;
+}
+
+#product-name,
+#quantity-of-items,
+#item-price {
+	font-family: "Molengo", sans-serif;
 }
 
 hr {
